<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="app_name">GoGetMe</string>
 <string name="action_settings">Settings</string>
 <string name="hello_world">Hello world!</string>
 
 <string name="location_prompt">Choose a location</string>
	
    <!-- Defaulf Stuff -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <!--  
    <string name=""></string>
    -->
    
    <!-- Settings Menu -->
    
    <string name="settingsMenu">Settings Menu</string>
    <string name="checkLocation">Check Location</string>
    <string name="comeGetMe">Come Get Me</string>
    <string name="registerPhone">Register Phone</string>
    <string name="helpMenu">Help Menu</string>
    
    
    <!-- Check Location -->
    
    
    
    <!-- Come Get Me -->
    
    <string name="callNow">Call Now</string>
    
    
    <!-- Register Phone -->
    
    <string name="registerPhoneScreen">Set Phone Registration</string>
    <string name="enterYourName">Your name for phone registration</string>
    <string name="enterYourPhoneNo">Your phone number for registration</string>
    <string name="myPhoneNumber">My phone number</string>
    <string name="firstName">Enter First Name</string>
    <string name="lastName">Enter Last Name</string>
    <string name="registered_false">Phone is NOT registered</string>
    <string name="registered_true">Phone IS registered already</string>
    <string name="linkedPhone">Enter Linked Phone Number</string>
    <string name="msgRegisterPhone">Please register the phone</string>
    <string name="msgRegError0">This is a test</string>
    <string name="msgRegError1">There is no network connection</string>
    
    
    <!-- Help -->
    
    <string name="help">Help</string>
    <string name="helpmenu">Help Menu</string>
    <string name="helpScreen">Help Screen</string>
    <string name="helpItem1">Check Location Help</string>
    <string name="helpItem2">Come Get Me Help</string>
    <string name="helpItem3">Register Phone Help</string>

</resources>
