<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/txtMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/btn_vert_margin"
        android:textSize="@dimen/large_text"
        android:textStyle="bold"
        android:text="@string/settingsMenu"
        />
    
    <Button
        android:id="@+id/btnComeGetMe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/btn_horiz_margin"
        android:layout_marginRight="@dimen/btn_horiz_margin"
        android:onClick="callIntent"
        android:text="@string/comeGetMe" >
    </Button>
    
    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/btn_horiz_margin"
        android:layout_marginRight="@dimen/btn_horiz_margin"
        android:onClick="callIntent"
        android:text="@string/registerPhone" >
    </Button>
   
</LinearLayout>
